# fabushi

./: .gitattributes  .gitignore  .gitmodules  CODEBUDDY.md  FlutterWeb平台兼容性问题修复.md  _headers  _redirects  build_web.sh  deploy.sh  package-lock.json  修复FlutterWeb端文件传输功能.md  修复FlutterWeb编译错误：找不到'CrossPlatformFile'类型.md  全球法布施文件传输应用.md
.codebuddy/: analysis-summary.json
.github/: BRANCH_PROTECTION.md  cd-retry.txt
agent/: README.md
backend-proxy/: package-lock.json  package.json  server.js
docs/: architecture-vnext.md  deploy-artifact-path-guardrails.md  deploy-target-alignment.md  draft-ready-pr-reopen-fallback.md  release-controller.md  release-evidence.md  same-head-zero-check-gap-rule.md  staging-auth-contract.md  staging-shared-account-gate.md
fabushi/: .gitattributes  .gitignore  ADMIN_MEMBERSHIP_FIX.md  ALIPAY_AUTH_FIX.md  ALIPAY_FIX_SUMMARY.md  ALIPAY_LOGIN_FIX_SUMMARY.md  ALIPAY_LOGIN_WORKAROUND.md  ALIPAY_MACOS_PERMANENT_FIX.md  BACKGROUND_LOADING_FIX.md  CHANGELOG.md  CONTRIBUTING.md  DEBUG_TEXT_FEED.md  DEPENDENCY_FIX.md  DEPLOYMENT_GUIDE.md  FINAL_SUMMARY.md  FIREBASE_CLEANUP.md  FIX_WEBSOCKET_CONNECTION.md  FLUTTER_WEB_OPTIMIZATION_RESULTS.md  FLUTTER_WEB_WORKER_DEPLOYMENT.md  LIKE_FEATURE_COMPLETE.md  MAINTENANCE_GUIDE.md  MEMBERSHIP_DATA_FIX.md  MEMBERSHIP_FIX.md  MEMBERSHIP_HISTORY_FIX_SUMMARY.md  MIGRATION_GUIDE.md  PERFORMANCE_QUICK_REF.md  PERFORMANCE_SUMMARY.md  PERFORMANCE_TEST_GUIDE.md  QUICK_FIX.md  QUICK_START_VIDEO_FEED.md  QUICK_TEST_STEPS.md  README_FINAL.md  REFACTOR_COMPLETE.md  RELEASE_NOTES.md  (+36 more)
fabushi/web/wasm-proxy/: Cargo.toml
(+3938 files in other folders)
