[package]
name = "wasm-proxy"
version = "0.1.0"
edition = "2021"

[lib]
crate-type = ["cdylib"]

[dependencies]
wasm-bindgen = "0.2"
js-sys = "0.3"
web-sys = { version = "0.3", features = [
  "console",
  "Window",
  "Worker",
  "Blob",
  "BlobPropertyBag",
  "Url",
  "Response",
  "ResponseInit",
  "Headers",
  "Request",
  "RequestInit",
  "ServiceWorkerGlobalScope",
  "FetchEvent",
  "FormData",
  "File",
  "FileReader",
  "WebSocket",
] }
wasm-bindgen-futures = "0.4"
serde = { version = "1.0", features = ["derive"] }
serde-wasm-bindgen = "0.4"